--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -13,6 +13,120 @@ img{
 
 .logo {
     margin: auto;
-    padding-top: 10px;
-    height: 5rem;
+    transform: scale(0.5);
+    margin-bottom: -1rem;
+}
+
+.data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.character, .realm, .search {
+    padding: 4px;
+    margin: 8px;
+    width: 14rem;
+}
+
+.character, .realm {
+    background: #101040;
+    color: yellow;
+    border: 1px solid rgba(235, 241, 6, 0.7);
+}
+
+.search {
+    background-image: linear-gradient(#009688, #03A9F4);
+    color: white;
+    border: none;
+}
+
+.infoBox{
+    width: 100%;
+    height: 20rem;
+    background-color: #111931;
+    /* opacity: .8; */
+    margin-top: 2rem;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    position: relative;
+}
+
+.statsBox {
+    background: #070735;
+    margin: 2rem 1rem 2rem 5rem;
+    border-radius: 2%;
+    border: 1px solid rgba(147, 147, 150, 0.3);
+}
+
+.info {
+    width: 100%;
+    height: 100%;
+}
+
+.heading{
+    color: white;
+    padding-top: 15px;
+}
+
+.attributes {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    height: 100%;
+    max-width: 40%;
+    min-width: 40%;
+    margin-left: 3rem;
+    margin-top: -6px;
+}
+
+.attributes::after{
+    content: '';
+    background: linear-gradient(to bottom, transparent, gray);
+    width: 1px;
+    height: 13rem;
+    position: absolute;
+    margin-left: 20rem;
+}
+
+.tag {
+    color: gold;
+    display: flex;
+    justify-content: space-between;
+    padding: 3px 0;
+}
+
+p > span {
+    color: white;
+}
+
+span:nth-child(4){
+    color: lightblue;
+}
+
+.itemHeading, .listItem, .tagTwo, .level{
+    color: gold
+}
+
+.itemBox {
+    background: #070735;
+    margin: 2rem 5rem 2rem 1rem;
+    border-radius: 2%;
+    border: 1px solid rgba(147, 147, 150, 0.3);
+}
+
+.itemList {
+    width: 100%;
+    height: 100%;
+}
+
+.tagTwo{
+
+}
+
+.level{
+    
 }
