item box halfway

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -124,9 +124,14 @@ span:nth-child(4){
 }
 
 .tagTwo{
+    display: flex;
+    justify-content: space-between;
+}
 
+.listItem {
+    
 }
 
 .level{
-    
+
 }
