--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -99,6 +99,24 @@ img{
     padding-top: 15px;
 }
 
+.headingTwo{
+    margin-top: 20px;
+}
+
+.dataContainer {
+    display: flex;
+    height: 100%;
+}
+
+.compare {
+    margin-left: 6rem;
+    color: white;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 .attributes {
     display: flex;
     flex-direction: column;
