--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -100,7 +100,10 @@ img{
 }
 
 .headingTwo{
-    margin-top: 20px;
+    margin-top: 10px;
+    color: gold;
+    position: absolute;
+    margin-left: 26rem;
 }
 
 .dataContainer {
@@ -112,9 +115,15 @@ img{
     margin-left: 6rem;
     color: white;
     width: 100%;
-    height: 100%;
+    height: 85%;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: end;
+    margin-top: 20px;
+}
+
+.picture:hover {
+    border: 1px solid rgba(255, 249, 6, 0.5);
 }
 
 .attributes {
@@ -126,7 +135,7 @@ img{
     max-width: 40%;
     min-width: 40%;
     margin-left: 3rem;
-    margin-top: -20px;
+    margin-top: -25px;
 }
 
 .attributes::after{
