--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -39,13 +39,14 @@ img{
     background-image: linear-gradient(#009688, #03A9F4);
     color: white;
     border: none;
+    cursor: pointer;
 }
 
 .infoBox{
     width: 100%;
     height: 23rem;
     background-color: #111931;
-    /* opacity: .8; */
+    opacity: .9;
     margin-top: 2rem;
     border-top: 1px solid gray;
     border-bottom: 1px solid gray;
@@ -55,7 +56,7 @@ img{
 }
 
 .statsBox {
-    background: #19192f;
+    background: #050f2b;
     margin: 2rem 1rem 2rem 5rem;
     border-radius: 2%;
     border: 1px solid rgba(147, 147, 150, 0.3);
@@ -135,7 +136,7 @@ img{
     max-width: 40%;
     min-width: 40%;
     margin-left: 3rem;
-    margin-top: -25px;
+    margin-top: -10px;
 }
 
 .attributes::after{
@@ -170,7 +171,7 @@ span:nth-child(4){
 }
 
 .itemBox {
-    background: #19192f;
+    background: #050f2b;
     margin: 2rem 5rem 2rem 1rem;
     border-radius: 2%;
     border: 1px solid rgba(147, 147, 150, 0.3);
